<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConfigFile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ibCloseProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/btn_star" />

        <TextView
            android:id="@+id/tvTitleConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTitleConfig" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="474dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNameFile" />

        <EditText
            android:id="@+id/etNameFile"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:ems="10"
            android:hint="Kri View"
            android:inputType="text" />

        <TextView
            android:id="@+id/tvFormatoFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvFormatoFile" />

        <EditText
            android:id="@+id/etFormatoFile"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:ems="10"
            android:hint="--"
            android:inputType="text" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tvNumScenes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvNumScenes" />

            <CheckedTextView
                android:id="@+id/checkedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckedTextView" />

            <CheckedTextView
                android:id="@+id/checkedTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckedTextView" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:id="@+id/tvOrientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvOrientation" />

            <CheckedTextView
                android:id="@+id/checkedTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CheckedTextView" />

        </TableRow>
    </LinearLayout>

    <Button
        android:id="@+id/btnSaveFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveFile" />

</LinearLayout>