<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginBottom="8dp">

        <ImageButton
            android:id="@+id/ibBackArrowStt"
            android:layout_width="8dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:contentDescription="Flecha hacia atras"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:id="@+id/tvTitleMain"
            android:layout_width="168dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/tvTitleMain"
            android:textAlignment="center"
            android:textSize="25dp" />


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="133dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:contentDescription="cambiar tema"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/sun_and_moon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvTema"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        tools:text="@string/tvTema" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibInfo"
                android:layout_width="133dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:contentDescription="cambiar tema"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHelp"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        tools:text="@string/tvHelp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ibExit"
                android:layout_width="133dp"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:contentDescription="cambiar tema"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/exit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvExit"
                        android:layout_width="156dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:textAlignment="center"
                        android:textSize="20dp"
                        tools:text="@string/tvExit" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
